src/test/ui/error-codes/E0077.stderr
error[E0077]: SIMD vector element type should be machine type
  --> $DIR/E0077.rs:14:1
   |
LL | struct Bad(String); //~ ERROR E0077
   | ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0077"
